--- a/src/public/author.hbs
+++ b/src/public/author.hbs
@@ -5,13 +5,35 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{ author.email }}</title>
+
+  <style>
+    ul {
+      list-style: none;
+    }
+
+    a {
+      text-decoration: none;
+    }
+  </style>
+
+  <title>{{ author.name }}</title>
 </head>
 <body>
-  <div class="main-container">
-    <h2>{{ author.email }}</h2>
+  <div class="main-container" align="center">
+    <h2>{{ author.name }}</h2>
     <br>
-    <p></p> <!-- Добавить авторам authorName, authorBio и authorSocial с ссылками на их соц сети-->
+    <div class="bio">
+      <p>{{ author.bio }}</p>
+    </div>
+    <div class="articles">
+      <p>
+        <ul>
+          <li><a href="/articles/{{ articles.title }}">{{ articles.title }}</a></li>
+        </ul>
+    </div>
+    <div class="to-main-page">
+      <p><a href="/">Get back to Home</a></p>
+    </div>
   </div>
 </body>
 </html>
