--- a/src/public/index.hbs
+++ b/src/public/index.hbs
@@ -22,7 +22,7 @@
       <h2>Authors</h2>
       <ul>
         {{#each authors}}
-          <li><a href="/authors/{{ this.email }}">{{ this.email }}</a></li>
+          <li><a href="/authors/{{ this.name }}">{{ this.name }}</a></li>
         {{/each}}
       </ul>
     </div>
